# notes-os

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  README.md  pixi.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SPEC-speed-and-triage-ux.md  STATE.md
.planning/debug/: tui-blank-screen-blocking-on-mount.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v3.0-speed-triage-ux-REQUIREMENTS.md  v3.0-speed-triage-ux-ROADMAP.md
.planning/phases/01-scaffold/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-applescript-bridge/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-backup/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-sorting-core/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-VERIFICATION.md
.planning/phases/05-task-extraction/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-VERIFICATION.md
.planning/phases/06-tui-integration/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-VERIFICATION.md
.planning/phases/10-perf-bulk-preview/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  README.md
.planning/phases/11-ux-skeleton-preview/: 11-01-PLAN.md  11-01-SUMMARY.md  README.md
.planning/phases/12-backup-cadence/: 12-01-PLAN.md  README.md  (+2 more)
scripts/: setup-branch-protection.sh
src/notes_os/: __init__.py  app.py  app.tcss  backup.py  backup_models.py  config.py  exceptions.py
tests/: conftest.py  test_app.py  test_backup_integration.py  test_backup_unit.py  test_config_unit.py  test_package_imports.py
tests/screens/: __init__.py  test_async_harness.py  test_end_to_end.py  test_home_screen.py  test_navigation.py  test_sort_screen.py  test_task_extract_screen.py  test_tui_integration_smoke.py
tests/sorter/: conftest.py  test_controller_extraction.py  test_controller_integration.py  test_extraction_ui.py  test_extractor.py  test_notes_integration.py  test_notes_unit.py  test_resume_unit.py  test_router_unit.py  test_session_unit.py  test_task_writer.py  test_ui_unit.py
(+35 files in other folders)
