[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "para-notes-sorter"
requires-python = ">=3.11"
dynamic = ["version"]
description = "Keyboard-driven PARA notes sorter for Apple Notes (NotesOS M1)"
readme = "README.md"
dependencies = [
  "rich>=13.0",
  "textual>=0.80",
  "readchar>=4.0",
  "pydantic>=2.0",
]

[project.scripts]
notes = "notes_os.app:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/notes_os"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20", "SIM", "TCH", "RUF", "PTH", "ERA"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# S10x: asserts, hardcoded secrets fine in test code
"tests/**/*.py" = ["S101", "S105", "S106", "N802", "RUF001", "RUF002", "RUF003"]
"scripts/**" = ["T20"]
# RUF001: router uses U+203A as intentional UI separator for PARA display paths (ROUT-08)
"src/notes_os/sorter/router.py" = ["RUF001", "RUF002"]

[tool.ruff.lint.isort]
known-first-party = ["notes_os"]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_any_explicit = true
no_implicit_reexport = true
strict_equality = true
show_error_codes = true
show_column_numbers = true

# disallow_any_explicit is enforced globally, but subclassing Pydantic V2
# BaseModel inherits explicit `Any` from BaseModel's own API (e.g.
# `__init__(**data: Any)`, `model_validate(obj: Any)`) — mypy attributes that to
# every model class line, with OR without the pydantic.mypy plugin, and it cannot
# be typed away in our code (even a single `x: int` field trips it). So we exempt
# ONLY the modules that DEFINE Pydantic models. All non-model code keeps full
# explicit-Any checking. Add a model module here when a new phase introduces one.
[[tool.mypy.overrides]]
module = ["notes_os.sorter.models", "notes_os.backup_models", "notes_os.config", "notes_os.sorter.router", "notes_os.sorter.ui", "notes_os.sorter.session", "notes_os.sorter.extractor", "notes_os.sorter.resume"]
disallow_any_explicit = false

[tool.pytest.ini_options]
markers = [
  "integration: requires macOS with Apple Notes running",
  "slow: takes >5s",
]
addopts = ["-m", "not integration"]
asyncio_mode = "auto"
